--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -76,7 +76,7 @@ To efficiently sample the trajectory into independent sub-trajectories, a sampli
 
 The major drawback of this method is that a timescale $\left\{\delta\tau, \ldots, K\delta\tau\right\}$ needs to be defined in advance. To access the different timescales within a single simulation, the multiple-window algorithm developed by Dubbeldam et al.\ and implemented in the RASPA2 software for calculating mean squared displacements (MSD) in molecular dynamics simulations is employed.
 
-The different time windows are recursively defined using the default parameters of RASPA2. The first time window is defined by $K=25$ displacements with durations $\delta t, 2\delta t, \ldots,(K-1)\delta t$ and a shift of $\delta t$ (the default shift value $\delta t$ of the first window can be modified using the parameter ``SampleMSDEvery''). The second window is then based on a sampling time $\delta \tau_1 = K\delta t$, and the sub-trajectories have durations $(\tau_1^{(1)} = \delta\tau_1\right),\ldots,\left(\tau_1^{(K-1)} = (K-1)\delta\tau_1\right)$. This recursive process is repeated, where the $i$\e{th} window has a sampling time of $\delta \tau_i = K^i\delta t$ and sub-trajectories with durations $\left(\tau_i^{(1)} = \delta\tau_i\right),\ldots,\left(\tau_i^{(K-1)} = (K-1)\delta\tau_i\right)$. A window algorithm similar to the one described above is applied to each window. The algorithm terminates when no further window can be generated, i.e., when $\tau_n^{(k)}>t\e{tot}$ where $n$ is the index of the window and $k$ is the index in the single-window algorithm that defines the desired sampling time with respect to $\delta\tau_i$. The timescale $\delta \tau_i = K^i\delta t$ sampled follows a geometric progression, allowing access to very different timescales. This enables the identification of the timescale corresponding to the diffusion regime (linear relationship between the MSD and the duration of the sub-trajectories used in the averaging). The different timescales and the exponent value $b$ from fitting a function of the form $x \mapsto ax^b$ for the different time windows are illustrated in the next section (Figure~\ref{fgr:MSD_init}) --- values of $b$ close to $1$ can be associated with a diffusion regime. The determination of the diffusion coefficient is then simplified to a simple fitting problem, which will be further explained in the presentation of the diffusion coefficient screening in section~\ref{sct:md_screening}.
+The different time windows are recursively defined using the default parameters of RASPA2. The first time window is defined by $K=25$ displacements with durations $\delta t, 2\delta t, \ldots,(K-1)\delta t$ and a shift of $\delta t$ (the default shift value $\delta t$ of the first window can be modified using the parameter ``SampleMSDEvery''). The second window is then based on a sampling time $\delta \tau_1 = K\delta t$, and the sub-trajectories have durations $\tau_1^{(1)} = \delta\tau_1,\ldots,\tau_1^{(K-1)} = (K-1)\delta\tau_1$. This recursive process is repeated, where the $i$\e{th} window has a sampling time of $\delta \tau_i = K^i\delta t$ and sub-trajectories with durations $\tau_i^{(1)} = \delta\tau_i,\ldots,\tau_i^{(K-1)} = (K-1)\delta\tau_i$. A window algorithm similar to the one described above is applied to each window. The algorithm terminates when no further window can be generated, i.e., when $\tau_n^{(k)}>t\e{tot}$ where $n$ is the index of the window and $k$ is the index in the single-window algorithm that defines the desired sampling time with respect to $\delta\tau_i$. The timescale $\delta \tau_i = K^i\delta t$ sampled follows a geometric progression, allowing access to very different timescales. This enables the identification of the timescale corresponding to the diffusion regime (linear relationship between the MSD and the duration of the sub-trajectories used in the averaging). The different timescales and the exponent value $b$ from fitting a function of the form $x \mapsto ax^b$ for the different time windows are illustrated in the next section (Figure~\ref{fgr:MSD_init}) --- values of $b$ close to $1$ can be associated with a diffusion regime. The determination of the diffusion coefficient is then simplified to a simple fitting problem, which will be further explained in the presentation of the diffusion coefficient screening in section~\ref{sct:md_screening}.
 
 This methodology can then be replicated to thousands of structures to characterize the diffusion properties of these materials. Numerous screenings have already been conducted in the literature, as presented in Chapter 1, specifically in the section dedicated to transport property. The prediction of these quantities using machine learning will now be explored in more detail.
 
