--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -123,10 +123,9 @@ In this section, the focus shifts to the second approach, which relies on the de
     \caption{ Illustration of the cluster growth and the identification of boundary points in the TuTraST algorithm\autocite{Mace_2019}. The clusters are grown from left to right and top to bottom. A tunnel is detected when the points are connected all the way from one periodic boundary to another (red). The boundary points assigned to the TS surface are indicated in yellow. Reprinted with permission from the original paper~\cite{Mace_2019} copyright \copyright\ 2019 American Chemical Society. }\label{fgr:tutrast}
 \end{figure}
 
-\todo{HERE}
-In practice, the calculation of an energy grid that detects all the different components of the lattice is required. The algorithm iterates over different energy values from $E\e{min}+\delta E, \ldots, E\e{min}+N\delta E$, such that the maximum energy is below a predetermined energy cutoff $E\e{min}+N\delta E<E\e{cutoff}$. At the initial step, the clusters of grid points with an energy below $E\e{min}+\delta E$ are naturally formed based on their connectivity. Then, at iteration level $L$, the clusters found in the previous iteration $L-1$ are grown layer by layer (one layer corresponds to the immediate neighbors on the grid), as shown in Figure~\ref{fgr:tutrast}. If a layer touches another cluster, a boundary point is identified --- it is only accepted if the energy difference between minimum energy of the two touching basins and the boundary point value is sufficiently high. If the barrier is negligible, the basins are merged. At the end of the process, the boundary values are clustered and assigned as the transition surface between different pairs of adsorption basins. If the points of the basins and boundary surfaces are connected all the way through, a tunnel can be defined for diffusion to occur. After a sufficient number of iterations, tunnels with different basins separated by transition state surfaces are established. A kinetic Monte Carlo simulation can then be performed to determine the diffusion coefficient within each tunnel. The diffusion coefficient in the material corresponds to a weighted average of the diffusion coefficients in each tunnel, with the weight determined by the probability of presence in each tunnel, which corresponds to the sum of the Boltzmann factors (proportional to the Henry coefficient in a given tunnel).
+In practice, the calculation of an energy grid that detects all the different components of the lattice is required. The algorithm iterates over different energy values from $E\e{min}+\delta E, \ldots, E\e{min}+N\delta E$, such that the maximum energy is below a predetermined energy cutoff $E\e{min}+N\delta E<E\e{cutoff}$. At the initial step, the clusters of grid points with an energy below $E\e{min}+\delta E$ are naturally formed based on their connectivity. Then, at iteration level $L$, the clusters found in the previous iteration $L-1$ are grown layer by layer (one layer corresponds to the immediate neighbors on the grid), as shown in Figure~\ref{fgr:tutrast}. If a layer touches another cluster, a boundary point is identified --- it is tagged as a point of the TS surface if the energy barrier to go from the basin to this point is sufficiently high, else the energy barrier is negligible, and the basins are merged. At the end of the process, the boundary values are clustered and assigned as the transition surface between different pairs of adsorption basins. If the points of the basins and boundary surfaces are connected all the way through, a tunnel can be defined for diffusion to occur. After a sufficient number of iterations, tunnels with different basins separated by transition state surfaces are established. A kinetic Monte Carlo simulation can then be performed to determine the diffusion coefficient within each tunnel. The diffusion coefficient in the material corresponds to a weighted average of the diffusion coefficients in each tunnel, with the weight determined by the probability of presence in each tunnel, which corresponds to the sum of the Boltzmann factors (proportional to the Henry coefficient in a given tunnel).
 
-This approach is very promising as it is significantly more efficient than MD simulation-based techniques. The implemented code in Matlab (although not computationally very efficient) already outperforms most MD simulations for diffusion coefficient calculation, with minimal compromise in accuracy, as demonstrated in the diffusion coefficient screening of zeolites. To enhance efficiency further, the algorithm for efficient search of transition states was rewritten in C++. At this stage of development, the focus was on determining the diffusion activation energy, which is independent of transition state detection. Detailed algorithmic information for determining the diffusion activation energy in nanoporous materials using the in-house algorithm is provided in section~\ref{sct:algo_diff}, along with the projected development of a faster lattice kinetic Monte Carlo simulation inspired by the TuTraST algorithm.
+This approach is very promising as it is significantly more efficient than MD simulation-based techniques. The code of Mace et al.\autocite{Mace_2019} implemented in Matlab (although not computationally very efficient) already outperforms most MD simulations in terms of computation time for diffusion coefficient calculation, with minimal compromise in accuracy, as demonstrated in their diffusion coefficient screening of zeolites. To enhance efficiency further, the algorithm for efficient search of transition states was rewritten in C++. At this stage of development, the focus was on determining the diffusion activation energy, which is independent of transition state detection. Detailed algorithmic information for determining the diffusion activation energy in nanoporous materials using the in-house algorithm is provided in section~\ref{sct:algo_diff}, along with the projected development of a faster lattice kinetic Monte Carlo simulation inspired by the TuTraST algorithm.
 
 
 \section{Self-diffusion screening}\label{sct:md_screening}
@@ -137,7 +136,7 @@ To complement the thermodynamic screenings conducted in chapters 2--4, a screeni
 
 Before delving into the details of the screening study, the approach adopted for calculating diffusion coefficients using MSD values is demonstrated through an example: SBMOF-1\autocite{Banerjee_2016}. This preliminary study aids in calibrating the time parameters (time step, maximum time) for the final screening study.
 
-First, a molecular dynamics simulation of 500 million steps (approximately 1--2 days of simulation) was conducted, including a thousand initialization steps and 100 thousand equilibration steps to model xenon diffusion in the \texttt{KAXQIL}\autocite{Banerjee2012} MOF at infinite dilution. To achieve infinite dilution, the box size was adjusted to prevent interactions between different adsorbates. As shown in Figure~\ref{fgr:MSD_init}, there are different timescales at which distinct transport phenomena occur. 
+First, a molecular dynamics simulation of 500 million steps (approximately 1--2 days of simulation) was conducted, including a thousand initialization steps and 100 thousand equilibration steps to model a xenon atom diffusing in the \texttt{KAXQIL}\autocite{Banerjee2012} MOF at ``infinite dilution''. To achieve infinite dilution, the box size was adjusted to prevent interactions between different adsorbates. In these conditions, as shown in Figure~\ref{fgr:MSD_init}, there are different timescales at which distinct transport phenomena occur. 
 
 Within the range of \SI{1}{\fs} to \SI{1}{\ps}, a ballistic regime is observed, with the mean squared displacement following a squared dependence. For a particle of mass $m$, the MSD $\langle {r(\tau)}^2 \rangle$ in this regime obeys a simple ballistic relation (length equals velocity multiplied by time):
 \begin{equation}
@@ -152,7 +151,7 @@ where $v_m$ is the average velocity of a particle, following the Maxwell-Boltzma
     \caption{Left: Different regimes that could be observed in an MSD plot as a function of time. The ballistic regime can be considered super-diffusional, while the normal diffusion follows a linear relation described by the Einstein equation~\ref{eq:einstein}. The sub-diffusion regime commonly occurs in obstructed media such as nanoporous materials. The different regimes can be observed in the right plot of the actual MSD, which is calculated using the multiple-window method. Fittings are performed using a generic function $K_\alpha\tau^\alpha$, and the exponents $\alpha$ are provided in the legend. }\label{fgr:MSD_init}
 \end{figure}
 
-A transition from the ballistic regime to the pseudo-diffusional regime (where the exponent has not yet reached 1) is observed in the plot in cyan. Between \SI{1}{\ps} and \SI{100}{\ps}, a sub-diffusion regime is observed, characterized by an MSD that follows a power function of time, $\langle {r(\tau)}^2 \rangle=K_\alpha\tau^\alpha$, with an exponent less than $1$, as illustrated in the left plot of Figure~\ref{fgr:MSD_init}. This regime corresponds to the confinement of xenon particles within adsorption pores, where only thermal vibration occurs, and no diffusion hopping is observed at this timescale. Diffusion appears to begin at the \SI{10}{\ns} timescale. The MSD between \SI{0.01}{\ns} and \SI{0.4}{\ns}, as shown in Figure~\ref{fgr:MSD_linear_init}, represents a sub-diffusional regime due to the confinement imposed by the nanopores of \texttt{KAXQIL}. However, at \SI{0.4}{\ns}--\SI{9}{\ns}, the MSD starts to exhibit an exponent closer to $1$, allowing for a linear fit, albeit imperfect. Ideally, trajectory sampling on the order of tens of nanoseconds would be desirable for the next timescale. However, with an MD time step of \SI{1}{\fs}, this would multiply the computation time by at least 5 (1--2 weeks for one MD simulation), which becomes prohibitive.
+A transition from the ballistic regime to the pseudo-diffusional regime (where the exponent has not yet reached 1) is observed in the plot in cyan. Between \SI{1}{\ps} and \SI{100}{\ps}, a sub-diffusion regime is observed, characterized by an MSD that follows a power function of time, $\langle {r(\tau)}^2 \rangle=K_\alpha\tau^\alpha$, with an exponent less than $1$, as illustrated in the left plot of Figure~\ref{fgr:MSD_init}. This regime corresponds to the confinement of xenon particles within adsorption pores, where only thermal vibration occurs, and no diffusion hopping is observed at this timescale. Diffusion appears to begin at the \SI{10}{\ns} timescale. The MSD between \SI{0.01}{\ns} and \SI{0.4}{\ns}, as shown in Figure~\ref{fgr:MSD_linear_init}, represents a sub-diffusional regime due to the confinement imposed by the nanopores of \texttt{KAXQIL}. However, at \SI{0.4}{\ns}--\SI{9}{\ns}, the MSD starts to exhibit an exponent of $0.7$, which is closer to $1$, allowing for a linear fit, albeit imperfect (Figure~\ref{fgr:MSD_linear_init}). Ideally, trajectory sampling on the order of tens of nanoseconds would be desirable for the next timescale. However, with an MD time step of \SI{1}{\fs}, this would multiply the computation time by at least 5 (1--2 weeks for one MD simulation), which becomes prohibitive.
 
 \begin{figure}[ht]
   \centering
@@ -161,9 +160,9 @@ A transition from the ballistic regime to the pseudo-diffusional regime (where t
 \caption{ Plots of the MSD at the last two timescales considered in Figure~\ref{fgr:MSD_init}. On the left, the timescale between \SI{0.01}{\ns} and \SI{0.4}{\ns} is considered. The MSD is fitted using a power function with the same previously determined exponent, and a linear fit is provided to demonstrate its incompatibility with the diffusion equation. On the right, a similar approach is employed for the timescale between \SI{0.4}{\ns} and \SI{9}{\ns}. }\label{fgr:MSD_linear_init}
 \end{figure}
 
-By fitting a linear relation using the right plot of Figure~\ref{fgr:MSD_linear_init} and deducing the diffusion coefficient, an underestimated value of the diffusion coefficient of $2.24\times 10^{-8}$~\si{\square\cm\per\s} is obtained --- it is an underestimation due to the concave nature of the MSD, which reduces the slope in the fitting process. However, this value is already a good estimation of the diffusion coefficient, considering the relatively high value of the exponent $\alpha$ in the $K_\alpha\tau^\alpha$ equation.
+By fitting a linear relation using the right plot of Figure~\ref{fgr:MSD_linear_init} and deducing the diffusion coefficient, an underestimated value of the diffusion coefficient of $2.24\times 10^{-8}$~\si{\square\cm\per\s} is obtained --- it is an underestimation due to the concave nature of the MSD, which reduces the slope in the fitting process. However, this value is already a good estimation of the diffusion coefficient, considering the relatively high value of the exponent $\alpha=0.7$ in the fitting equation $K_\alpha\tau^\alpha$.
 
-To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.13\times 10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.37\times 10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials.
+To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.13\times 10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.37\times 10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials.\todo{HERE}
 
 Increased confidence in the method led to the exploration of higher timescales beyond the reach of an MD time step of \SI{1}{\fs}, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. An initial calculation with 500 million steps was performed to validate the diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns} was considered, and the MSD was calculated from approximately 200 sampled trajectories, resulting in reasonably accurate values. A more accurate diffusion coefficient of $2.6\times 10^{-8}$~\si{\square\cm\per\s} was obtained, which is very close to the value obtained using the previous approach. The value is slightly higher (which was expected), as the previous value was overestimated. Thus, this approach is consistent with the previous one.
 
