--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -448,7 +448,7 @@ To build more relevant energy descriptors, it is necessary to return to the defi
 The core structure of this novel algorithm encompasses a grid algorithm, where the evaluation of the interaction energy at each point of the preset grid over the structure's unit cell is required. A naive approach would demand an expensive energy calculation at each grid point. To improve this approach, two main simplifications are incorporated into the algorithm --- a quick evaluation of the framework occupied grid points and the exploitation of symmetry. The grid points that overlap with the framework's atoms have highly positive energy mainly due to the interaction with the overlapping atom. Contributions of high-energy values to the thermodynamic quantities presented in the section~\ref{sct:thermo} are negligible. Hence, by employing a rejection parameter similar to the one developed for surface sampling as shown in the section~\ref{sct:rejection_condition}, the interaction energy of the grid points within the sphere of radius $\mu\times\sigma_{g-h}$ can be precalculated. If the interaction energy value is higher than a preset energy threshold $E\e{th}$, the corresponding grid point adopts these values as the interaction energy, and no further calculation is performed for that point. The grid's symmetry is determined based on the structure's symmetry using the grid definition of the Gemmi Project. Through the utilization of symmetry operations on a grid point value, it can be propagated to other symmetry-equivalent grid points, as illustrated in Figure~\ref{fgr:principle_grid}. Since MOF structures are usually highly symmetric, this approach reduces the computation time required to calculate the interaction energy of a guest molecule at a given grid node with all the surrounding framework atoms within a specified cutoff. Having presented the primary components of our optimized grid calculation, the integration of this calculation in the algorithm's implementation will now be demonstrated.
 
 \begin{enumerate}
-  \item A loop performed over the framework atoms and the grid points around a sphere of radius $\mu\times\sigma_{g-h}$, where $\sigma_{g-h}$ is the distance at which the LJ potential energy between the guest atom $g$ and the host atom is zero. The LJ potential energy between the guest molecule and the closest host atom is calculated and only the grid points with an energy lower than a predefined threshold $E\e{th}$ are considered ``unvisited'' and will be recalculated in the following loop, the others are considered blocked by the framework and will be considered already ``visited''. This first loop over the framework atoms aims at filtering out the grid points that are blocked by the framework, and this preliminary filtering will be referred to as ``blocking'' in the Table~\ref{tab:grid}.
+  \item A loop performed over the framework atoms and the grid points around a sphere of radius $\mu\times\sigma_{g-h}$, where $\sigma_{g-h}$ is the distance at which the LJ potential energy between the guest atom $g$ and the host atom is zero. The LJ potential energy between the guest molecule and the closest host atom is calculated and only the grid points with an energy lower than a predefined threshold $E\e{th}$ are considered ``unvisited'' and will be recalculated in the following loop, the others are considered blocked by the framework and will be considered already ``visited''. This first loop over the framework atoms aims at filtering out the grid points that are blocked by the framework, and this preliminary filtering will be referred to as ``blocking'' in Table~\ref{tab:grid}.
   \item A second loop over the ``unvisited'' grid points is performed --- at each increment, if the point is ``unvisited'', the interaction energy is calculated between the guest and all the host atoms within the cutoff, then the symmetric images of this point are filled with the same energy value and are considered ``visited'' by the algorithm. This symmetry-aware grid exploration allows the algorithm to divide the time required by the average number symmetry images --- this module will be referred to as ``symmetry'' in Table~\ref{tab:grid}.
 \end{enumerate}
 
