--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -261,7 +261,7 @@ These two studies clearly demonstrate the failure of current screening methodolo
 
 \subsection{Studying the polarization}
 
-The physical reason behind the consideration of the polarization effect for xenon/krypton separation is to exploit the difference in polarizability between Xe (\SI{4.0}{\cubic\angstrom}) and Kr (\SI{2.5}{\cubic\angstrom})\autocite{Olney1997} to its full potential. Seen from a broad perspective, the order of magnitude of the induction energy is actually higher than other standard van der Waals energies, as explained in Section~\ref{sct:interaction}. For instance, the ion-induced dipole interaction is reported to range between 40--600~\si{\kJ\per\mol}. In the case of ZJU-74a-Ni, the Ni\ex{2+}---Xe---Ni\ex{2+} interaction originates from selectivity, which corresponds to this specific type of interaction and predominantly explains the experimental selectivity values. Incorporating polarization into the screening procedure has the potential to completely alter the obtained structures and the types of interactions at play.
+The physical reason behind the consideration of the polarization effect for xenon/krypton separation is to exploit the difference in polarizability between Xe (\SI{4.0}{\cubic\angstrom}) and Kr (\SI{2.5}{\cubic\angstrom})\autocite{Olney1997} to its full potential. Seen from a broad perspective, the order of magnitude of the induction energy is actually higher than other standard van der Waals energies, as explained in section~\ref{sct:interaction}. For instance, the ion-induced dipole interaction is reported to range between 40--600~\si{\kJ\per\mol}. In the case of ZJU-74a-Ni, the Ni\ex{2+}---Xe---Ni\ex{2+} interaction originates from selectivity, which corresponds to this specific type of interaction and predominantly explains the experimental selectivity values. Incorporating polarization into the screening procedure has the potential to completely alter the obtained structures and the types of interactions at play.
 
 Bearing this in mind, Becker et al.\ carried out an interesting study on a series of MOF materials with a high density of open-metal sites, the M-MOF-74 with M = Co, Cr, Cu, Fe, Mg, Mn, Ni, Ti, V, and Zn.\autocite{Becker_2017} By introducing a potential induced by the surrounding partial charges to a modified LJ potential, the authors successfully replicated the experimental isotherm data for \ce{CO2} and \ce{CH4} adsorption on this series of MOFs. They also showed the inadequacy of the standard UFF force field in describing the adsorption behavior of \ce{CO2} on the open-metal sites, thereby overlooking a highly adsorptive site at infinite dilution.
 
