--- a/thesis.bib
+++ b/thesis.bib
@@ -3492,6 +3492,19 @@ URL = {https://doi.org/10.1137/0216006},
   title = {Amino substituted Cu3(btc)2: a new metal{\textendash}organic framework with a versatile functionality},
   journal = {Chemical Communications}
 }
+@article{Chui_1999,
+	doi = {10.1126/science.283.5405.1148},
+	url = {https://doi.org/10.1126%2Fscience.283.5405.1148},
+	year = 1999,
+	month = {feb},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	volume = {283},
+	number = {5405},
+	pages = {1148--1150},
+	author = {Stephen S.-Y. Chui and Samuel M.-F. Lo and Jonathan P. H. Charmant and A. Guy Orpen and Ian D. Williams},
+	title = {A Chemically Functionalizable Nanoporous Material [Cu$_3$({TMA})$_2$(H$_2$O)$_3$]$_n$},
+	journal = {Science}
+}
 @article{Maginn_2020,
 	doi = {10.33011/livecoms.1.1.6324},
 	url = {https://doi.org/10.33011%2Flivecoms.1.1.6324},
